# cmakedependencyremover

./: .gitignore  CmakeDependencyRemover.sln  README.md
CmakeDependencyRemover/: CmakeDependencyRemover.csproj  DependencyManager.cs  DirectoryManager.cs  IDependencyManager.cs  Program.cs  ProjectFileManager.cs  SolutionFileManager.cs
CmakeDependencyRemover.Test/: CmakeDependencyRemover.Test.csproj  DirectoryTests.cs  Program.cs  ProjectFileTests.cs  SolutionFileTests.cs
CmakeDependencyRemover.Test/Properties/: AssemblyInfo.cs
CmakeDependencyRemover.Test/resource/FileExtensionTest/: ALL_BUILD.vcxproj  Boggle.sln  ZERO_CHECK.vcxproj.filters
CmakeDependencyRemover.Test/resource/FileExtensionTest/SomeInnerDirectory/: ALL_BUILD.vcxproj.filters
CmakeDependencyRemover.Test/resource/TestFiles/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
CmakeDependencyRemover.Test/resource/TestFiles/boggle_library/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BoggleLibrary.sln  BoggleLibrary.vcxproj  BoggleLibrary.vcxproj.filters
CmakeDependencyRemover.Test/resource/TestFiles/boggle_library/cmake/: CMakeLists.txt
CmakeDependencyRemover.Test/resource/TestFiles/boggle_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BoggleTest.sln  BoggleTest.vcxproj  BoggleTest.vcxproj.filters
CmakeDependencyRemover.Test/resource/TestFiles/boggle_test/cmake/: CMakeLists.txt
CmakeDependencyRemover.Test/resource/TestFiles/cmake/: CMakeLists.txt
CmakeDependencyRemover.UI/: App.xaml  App.xaml.cs  CmakeDependencyRemover.UI.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
CmakeDependencyRemover.UI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
CmakeDependencyRemover.UI/Themes/: Generic.xaml
CmakeDependencyRemover.UI/UIControls/: DirectoryTreeViewItem.cs  MainTabControl.cs  MainTabControlItem.cs
CmakeDependencyRemover.UI/ViewModels/: DirectoryView.cs  DirectoryViewModel.cs  FileViewModel.cs  TreeViewItemViewModel.cs
CmakeDependencyRemover/Properties/: AssemblyInfo.cs
